@@ -34,10 +34,10 @@ public class FlunkedState extends FlunkedState_Base {
         init(registration, person, dateTime);
     }
 
-    @Override
-    public RegistrationStateType getStateType() {
-        return RegistrationStateType.FLUNKED;
-    }
+//    @Override
+//    public RegistrationStateType getStateType() {
+//        return RegistrationStateType.FLUNKED;
+//    }
 
     @Override
     public RegistrationStateTypeEnum getStateTypeEnum() {
