@@ -29,10 +29,10 @@ public class InactiveState extends InactiveState_Base {
         init(registration, person, dateTime);
     }
 
-    @Override
-    public RegistrationStateType getStateType() {
-        return RegistrationStateType.INACTIVE;
-    }
+//    @Override
+//    public RegistrationStateType getStateType() {
+//        return RegistrationStateType.INACTIVE;
+//    }
 
     @Override
     public RegistrationStateTypeEnum getStateTypeEnum() {
