@@ -83,55 +83,55 @@ public abstract class RegistrationState extends RegistrationState_Base {
         setRootDomainObject(Bennu.getInstance());
     }
 
-    @Deprecated
-    private static RegistrationState createState(Registration registration, Person person, DateTime dateTime,
-            RegistrationStateType stateType) {
-
-        RegistrationState newState = null;
-        switch (stateType) {
-        case REGISTERED:
-            newState = new RegisteredState(registration, person, dateTime);
-            break;
-        case CANCELED:
-            newState = new CanceledState(registration, person, dateTime);
-            break;
-        case CONCLUDED:
-            newState = new ConcludedState(registration, person, dateTime);
-            break;
-        case FLUNKED:
-            newState = new FlunkedState(registration, person, dateTime);
-            break;
-        case INTERRUPTED:
-            newState = new InterruptedState(registration, person, dateTime);
-            break;
-        case SCHOOLPARTCONCLUDED:
-            newState = new SchoolPartConcludedState(registration, person, dateTime);
-            break;
-        case STUDYPLANCONCLUDED:
-            newState = new StudyPlanConcludedState(registration, person, dateTime);
-            break;
-        case INTERNAL_ABANDON:
-            newState = new InternalAbandonState(registration, person, dateTime);
-            break;
-        case EXTERNAL_ABANDON:
-            newState = new ExternalAbandonState(registration, person, dateTime);
-            break;
-        case MOBILITY:
-            newState = new MobilityState(registration, person, dateTime);
-            break;
-        case TRANSITION:
-            newState = new TransitionalState(registration, person, dateTime);
-            break;
-        case TRANSITED:
-            newState = new TransitedState(registration, person, dateTime);
-            break;
-        case INACTIVE:
-            newState = new InactiveState(registration, person, dateTime);
-            break;
-        }
-
-        return newState;
-    }
+//    @Deprecated
+//    private static RegistrationState createState(Registration registration, Person person, DateTime dateTime,
+//            RegistrationStateType stateType) {
+//
+//        RegistrationState newState = null;
+//        switch (stateType) {
+//        case REGISTERED:
+//            newState = new RegisteredState(registration, person, dateTime);
+//            break;
+//        case CANCELED:
+//            newState = new CanceledState(registration, person, dateTime);
+//            break;
+//        case CONCLUDED:
+//            newState = new ConcludedState(registration, person, dateTime);
+//            break;
+//        case FLUNKED:
+//            newState = new FlunkedState(registration, person, dateTime);
+//            break;
+//        case INTERRUPTED:
+//            newState = new InterruptedState(registration, person, dateTime);
+//            break;
+//        case SCHOOLPARTCONCLUDED:
+//            newState = new SchoolPartConcludedState(registration, person, dateTime);
+//            break;
+//        case STUDYPLANCONCLUDED:
+//            newState = new StudyPlanConcludedState(registration, person, dateTime);
+//            break;
+//        case INTERNAL_ABANDON:
+//            newState = new InternalAbandonState(registration, person, dateTime);
+//            break;
+//        case EXTERNAL_ABANDON:
+//            newState = new ExternalAbandonState(registration, person, dateTime);
+//            break;
+//        case MOBILITY:
+//            newState = new MobilityState(registration, person, dateTime);
+//            break;
+//        case TRANSITION:
+//            newState = new TransitionalState(registration, person, dateTime);
+//            break;
+//        case TRANSITED:
+//            newState = new TransitedState(registration, person, dateTime);
+//            break;
+//        case INACTIVE:
+//            newState = new InactiveState(registration, person, dateTime);
+//            break;
+//        }
+//
+//        return newState;
+//    }
     
     private static RegistrationState createState(Registration registration, Person person, DateTime dateTime,
             RegistrationStateTypeEnum stateType) {
@@ -192,7 +192,7 @@ public abstract class RegistrationState extends RegistrationState_Base {
         init(registration, null, null);
     }
 
-    public abstract RegistrationStateType getStateType();
+//    public abstract RegistrationStateType getStateType();
     
     public abstract RegistrationStateTypeEnum getStateTypeEnum();
 
@@ -209,7 +209,7 @@ public abstract class RegistrationState extends RegistrationState_Base {
         try {
 
             org.fenixedu.academic.domain.student.RegistrationStateLog.createRegistrationStateLog(getRegistration(),
-                    Bundle.MESSAGING, "log.registration.registrationstate.removed", getStateType().getDescription(),
+                    Bundle.MESSAGING, "log.registration.registrationstate.removed", getStateTypeEnum().getDescription(),
                     getRemarks());
             setExecutionInterval(null);
             setRegistration(null);
@@ -244,14 +244,14 @@ public abstract class RegistrationState extends RegistrationState_Base {
         super.setStateDate(yearMonthDay.toDateTimeAtMidnight());
     }
 
-    @Deprecated
-    public static RegistrationState createRegistrationState(Registration registration, Person responsible, DateTime creation,
-            RegistrationStateType stateType, ExecutionInterval executionInterval) {
-        RegistrationState createdState = RegistrationState.createState(registration, responsible, creation, stateType);
-        createdState.setExecutionInterval(executionInterval);
-        registration.getStudent().updateStudentRole();
-        return createdState;
-    }
+//    @Deprecated
+//    public static RegistrationState createRegistrationState(Registration registration, Person responsible, DateTime creation,
+//            RegistrationStateType stateType, ExecutionInterval executionInterval) {
+//        RegistrationState createdState = RegistrationState.createState(registration, responsible, creation, stateType);
+//        createdState.setExecutionInterval(executionInterval);
+//        registration.getStudent().updateStudentRole();
+//        return createdState;
+//    }
     
     public static RegistrationState createRegistrationState(Registration registration, Person responsible, DateTime creation,
             RegistrationStateTypeEnum stateType, ExecutionInterval executionInterval) {
@@ -272,7 +272,7 @@ public abstract class RegistrationState extends RegistrationState_Base {
 //    }
 
     public boolean isActive() {
-        return getStateType().isActive();
+        return getStateTypeEnum().isActive();
     }
 
 }
